unpackaged/main/default/objects/pse__Concur_Expense_Type_Mapping__mdt/pse__Concur_Expense_Type_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Contains records that specify information required for Concur to PSA Expense Type Mapping</description>
    <label>Concur Expense Type Mapping</label>
    <pluralLabel>Concur Expense Type Mappings</pluralLabel>
</CustomObject>