unpackaged/main/default/objects/pse__Concur_Expense_Type_Mapping__mdt/fields/pse__Active__c.field-meta.xml
<CustomField>
    <fullName>pse__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>