unpackaged/main/default/objects/pse__Concur_Expense_Type_Mapping__mdt/fields/pse__Concur_Expense_Category__c.field-meta.xml
<CustomField>
    <fullName>pse__Concur_Expense_Category__c</fullName>
    <description>This value is ignored if the Concur Expense Type field is populated.</description>
    <inlineHelpText>This value is ignored if the Concur Expense Type field is populated.</inlineHelpText>
    <label>Concur Expense Category</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>