unpackaged/main/default/objects/pse__Concur_Expense_Type_Mapping__mdt/fields/pse__Concur_Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Concur_Expense_Type__c</fullName>
    <label>Concur Expense Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>